Increases top padding on site title/logo area to ensure it will not be overlapped by a wide main navigation menu.

--- a/css/parent-theme-modifications-1000+.css
+++ b/css/parent-theme-modifications-1000+.css
@@ -32,7 +32,7 @@ header#site-header:before {
 
 /* Style site title area */
 .header-titles-wrapper {
-    padding: 1em 1em 0;
+    padding: 2em 1em 0;
 }
 
 .header-titles {
